new cava config and picom animations

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,7 +18,12 @@ set -g @plugin 'omerxx/tmux-sessionx'
 
 # Plugin settings
 set -g @resurrect-capture-pane-contents 'on'
-set -g @continuum-restore 'off'
+set -g @continuum-restore 'on'
+
+# Set prefix key to C-a
+set -g prefix C-a
+unbind C-b
+bind-key C-a send-prefix
 
 set -g @sessionx-bind 'space'
 
