--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -8,13 +8,16 @@ xrender-sync-fence = true;
 
 # corners
 rounded-corners = true;
-corner-radius = 14;
+corner-radius = 12;
 
 # Exclude specific windows from rounded corners (optional)
 rounded-corners-exclude = [
   "class_g = 'i3-frame'",
   "class_g = 'Polybar'",
   "class_g = 'Rofi'",
+  "name = 'Notification'",
+  "window_type = 'dock'",
+  "window_type = 'desktop'"
 ];
 
 detect-rounded-corners = true;
@@ -22,7 +25,7 @@ detect-rounded-corners = true;
 # Blur
 blur-method = "dual_kawase";
 blur-size = 12;
-blur-strength = 6;
+blur-strength = 3;
 blur-background = true;
 blur-background-frame = false;
 blur-kern = "3x3box";
@@ -31,17 +34,22 @@ blur-background-exclude = [
   "window_type = 'desktop'",
   "window_type = 'dock'",
   "role = 'xborder'",
+  "class_g = 'Conky'",
+  "name = 'Notification'",
+  # "_GTK_FRAME_EXTENTS@:c"
 ];
 
 # Enable shadows
-shadow = false;
-shadow-radius = 15;
-shadow-offset-x = 10;
-shadow-offset-y = 10;
-shadow-opacity = 0.6;
+shadow = true;
+shadow-radius = 20;
+shadow-offset-x = -7;
+shadow-offset-y = -7;
+shadow-opacity = 0.75;
 
 shadow-exclude = [
-"class_g =  'Polybar'"
+"class_g =  'Polybar'",
+"class_g =  'Rofi'",
+"name = 'Notification'"
 ]
 
 # Opacity
@@ -50,10 +58,46 @@ active-opacity = 0.9;
 
 # Fading
 fading = true;
-fade-in-step = 0.05;
-fade-out-step = 0.05;
+fade-in-step = 0.03;
+fade-out-step = 0.04;
 fade-delta = 10;
 fade-time = 200;
-fade-duration = 200;
+fade-duration = 300;
 
+# Animations
+animations = (
+{
+  triggers = [
+    "open", 
+    "show", 
+  ];
 
+  preset = "appear";
+  duration = "1";
+},
+{
+  triggers = [
+    "close", 
+    "hide", 
+  ];
+
+  preset = "disappear";
+  duration = "1";
+},
+{
+  triggers = [
+    "geometry"
+  ];
+
+  preset = "geometry-change";
+  duration = "1";
+})
+
+transition-length = 400;
+transition-pow-x = 0.2;
+transition-pow-y = 0.2;
+transition-pow-w = 0.3;
+transition-pow-h = 0.3;
+size-transitition = true;
+spawn-center-screen = true;
+spawn-center = true;
