--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -5,7 +5,6 @@ bold_italic_font auto
 
 font_size 14.0
 window_padding_width 25
-include theme.conf
 background_opacity 0.6
 hide_window_decorations yes
 confirm_os_window_close 0
@@ -20,6 +19,9 @@ map ctrl+equal change_font_size all +1.0
 map ctrl+minus change_font_size all -1.0
 
 # background_image /home/ssk/Wallpaper-Bank/city-night-aerial-aerial-view-lights-traffic-building.jpg
+
+# Launch tmux no startup
+shell tmux
 
 
 # Tokyo Night
