--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -25,7 +25,7 @@ detect-rounded-corners = true;
 # Blur
 blur-method = "dual_kawase";
 blur-size = 12;
-blur-strength = 3;
+blur-strength = 5;
 blur-background = true;
 blur-background-frame = false;
 blur-kern = "3x3box";
@@ -36,7 +36,7 @@ blur-background-exclude = [
   "role = 'xborder'",
   "class_g = 'Conky'",
   "name = 'Notification'",
-  # "_GTK_FRAME_EXTENTS@:c"
+  "_GTK_FRAME_EXTENTS"
 ];
 
 # Enable shadows
@@ -45,6 +45,7 @@ shadow-radius = 20;
 shadow-offset-x = -7;
 shadow-offset-y = -7;
 shadow-opacity = 0.75;
+shadow-color = "#000000";
 
 shadow-exclude = [
 "class_g =  'Polybar'",
@@ -63,35 +64,79 @@ fade-out-step = 0.04;
 fade-delta = 10;
 fade-time = 200;
 fade-duration = 300;
+no-fading-openclose = true
+no-fading-destroyed-argb = true
 
 # Animations
 animations = (
+    {
+    triggers = ["close", "hide"];
+    opacity = {
+    curve = "linear";
+    duration = 0.1;
+    start = "window-raw-opacity-before";
+    end = 0;
+    };
+#    blur-opacity = "opacity";
+    shadow-opacity = "opacity";
+    },
+    {
+    triggers = ["open", "show"];
+    opacity = {
+    curve = "cubic-bezier(0,1,1,1)";
+    duration = 0.5;
+    start = 0;
+    end = "window-raw-opacity";
+    };
+#    blur-opacity = "opacity";
+    shadow-opacity = "opacity";
+    offset-x = "(1 - scale-x) / 2 * window-width";
+    offset-y = "(1 - scale-y) / 2 * window-height";
+    scale-x = {
+      curve = "cubic-bezier(0,1.3,1,1)";
+      duration = 0.5;
+      start = 0.6;
+      end = 1;
+    };
+    scale-y = "scale-x";
+    shadow-scale-x = "scale-x";
+    shadow-scale-y = "scale-y";
+    shadow-offset-x = "offset-x";
+    shadow-offset-y = "offset-y";
+    },
 {
-  triggers = [
-    "open", 
-    "show", 
-  ];
+  triggers = ["geometry"]
+    scale-x = {
+      curve = "cubic-bezier(0,0,0,1.28)";
+      duration = 0.5;
+      start = "window-width-before / window-width";
+      end = 1;
+    }
+  scale-y = {
+    curve = "cubic-bezier(0,0,0,1.28)";
+    duration = 0.5;
+    start = "window-height-before / window-height";
+    end = 1;
+  }
+  offset-x = {
+    curve = "cubic-bezier(0,0,0,1.28)";
+    duration = 0.5;
+    start = "window-x-before - window-x";
+    end = 0;
+  }
+  offset-y = {
+    curve = "cubic-bezier(0,0,0,1.28)";
+    duration = 0.5;
+    start = "window-y-before - window-y";
+    end = 0;
+  }
 
-  preset = "appear";
-  duration = "1";
-},
-{
-  triggers = [
-    "close", 
-    "hide", 
-  ];
-
-  preset = "disappear";
-  duration = "1";
-},
-{
-  triggers = [
-    "geometry"
-  ];
-
-  preset = "geometry-change";
-  duration = "1";
-})
+    shadow-scale-x = "scale-x";
+    shadow-scale-y = "scale-y";
+    shadow-offset-x = "offset-x";
+    shadow-offset-y = "offset-y";
+  }
+)
 
 transition-length = 400;
 transition-pow-x = 0.2;
