--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -68,74 +68,74 @@ no-fading-openclose = true
 no-fading-destroyed-argb = true
 
 # Animations
+animations-exclude = [
+    "class_g = 'Polybar'",
+];
+
 animations = (
     {
-    triggers = ["close", "hide"];
-    opacity = {
-    curve = "linear";
-    duration = 0.1;
-    start = "window-raw-opacity-before";
-    end = 0;
-    };
-#    blur-opacity = "opacity";
-    shadow-opacity = "opacity";
+        triggers = ["close", "hide"];
+        opacity = {
+            curve = "linear";
+            duration = 0.1;
+            start = "window-raw-opacity-before";
+            end = 0;
+        };
+        shadow-opacity = "opacity";
     },
     {
-    triggers = ["open", "show"];
-    opacity = {
-    curve = "cubic-bezier(0,1,1,1)";
-    duration = 0.5;
-    start = 0;
-    end = "window-raw-opacity";
-    };
-#    blur-opacity = "opacity";
-    shadow-opacity = "opacity";
-    offset-x = "(1 - scale-x) / 2 * window-width";
-    offset-y = "(1 - scale-y) / 2 * window-height";
-    scale-x = {
-      curve = "cubic-bezier(0,1.3,1,1)";
-      duration = 0.5;
-      start = 0.6;
-      end = 1;
-    };
-    scale-y = "scale-x";
-    shadow-scale-x = "scale-x";
-    shadow-scale-y = "scale-y";
-    shadow-offset-x = "offset-x";
-    shadow-offset-y = "offset-y";
+        triggers = ["open", "show"];
+        opacity = {
+            curve = "cubic-bezier(0,1,1,1)";
+            duration = 0.5;
+            start = 0;
+            end = "window-raw-opacity";
+        };
+        offset-x = "(1 - scale-x) / 2 * window-width";
+        offset-y = "(1 - scale-y) / 2 * window-height";
+        scale-x = {
+            curve = "cubic-bezier(0,1.3,1,1)";
+            duration = 0.5;
+            start = 0.6;
+            end = 1;
+        };
+        scale-y = "scale-x";
+        shadow-scale-x = "scale-x";
+        shadow-scale-y = "scale-y";
+        shadow-offset-x = "offset-x";
+        shadow-offset-y = "offset-y";
     },
-{
-  triggers = ["geometry"]
-    scale-x = {
-      curve = "cubic-bezier(0,0,0,1.28)";
-      duration = 0.5;
-      start = "window-width-before / window-width";
-      end = 1;
+    {
+        triggers = ["geometry"];
+        scale-x = {
+            curve = "cubic-bezier(0,0,0,1.28)";
+            duration = 0.5;
+            start = "window-width-before / window-width";
+            end = 1;
+        };
+        scale-y = {
+            curve = "cubic-bezier(0,0,0,1.28)";
+            duration = 0.5;
+            start = "window-height-before / window-height";
+            end = 1;
+        };
+        offset-x = {
+            curve = "cubic-bezier(0,0,0,1.28)";
+            duration = 0.5;
+            start = "window-x-before - window-x";
+            end = 0;
+        };
+        offset-y = {
+            curve = "cubic-bezier(0,0,0,1.28)";
+            duration = 0.5;
+            start = "window-y-before - window-y";
+            end = 0;
+        };
+        shadow-scale-x = "scale-x";
+        shadow-scale-y = "scale-y";
+        shadow-offset-x = "offset-x";
+        shadow-offset-y = "offset-y";
     }
-  scale-y = {
-    curve = "cubic-bezier(0,0,0,1.28)";
-    duration = 0.5;
-    start = "window-height-before / window-height";
-    end = 1;
-  }
-  offset-x = {
-    curve = "cubic-bezier(0,0,0,1.28)";
-    duration = 0.5;
-    start = "window-x-before - window-x";
-    end = 0;
-  }
-  offset-y = {
-    curve = "cubic-bezier(0,0,0,1.28)";
-    duration = 0.5;
-    start = "window-y-before - window-y";
-    end = 0;
-  }
-
-    shadow-scale-x = "scale-x";
-    shadow-scale-y = "scale-y";
-    shadow-offset-x = "offset-x";
-    shadow-offset-y = "offset-y";
-  }
 )
 
 transition-length = 400;
