formated polybar config

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -26,21 +26,11 @@ alert = #ff6161
 disabled = #4e505c       
 transparent = #00000000   
 label = #ffc600            
-; background = #2e3440       
-; background-alt = #3b4252 
-; foreground = #d8dee9    
-; primary = #88c0d0      
-; secondary = #81a1c1   
-; alert = #bf616a     
-; disabled = #4c566a 
-; transparent = #00000000    
-; label = #ebcb8b           
-
 
 [bar/toph]
 monitor = ${env:MONITOR:}
 width = 100%
-height = 20pt
+height = 36px
 radius = 0
 
 dpi = 96
@@ -63,7 +53,7 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = JetbrainsMono Nerd Font :size=14;2
+font-0 = JetBrainsMono Nerd Font:size=12:weight=bold;2
 
 modules-left = xworkspaces xwindow
 modules-right = battery pulseaudio brightness cpu memory temperature wlan eth  date
@@ -176,6 +166,7 @@ ramp-capacity-1 = 
 ramp-capacity-2 = 
 ramp-capacity-3 = 
 ramp-capacity-4 = 
+ramp-capacity-foreground = ${colors.primary}
 low-at = 5
 battery = BAT1
 adapter = ACAD
@@ -189,14 +180,21 @@ format-disconnected = <label-disconnected>
 label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
 
 [module/wlan]
-inherit = network-base
-interface-type = wireless
-label-connected = %{F#F0C674}%ifname%%{F-} %essid%
+type = internal/network
+interface = wlan0
+interval = 1
 
-[module/eth]
-inherit = network-base
-interface-type = wired
-label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
+format-connected =   <label-connected>
+format-connected-foreground = ${colors.primary}
+
+label-connected = %{F#F0C674}%essid%%{F-} %downspeed%
+label-connected-foreground = ${colors.foreground}
+
+format-disconnected =   <label-disconnected>
+format-disconnected-foreground = ${colors.secondary}
+
+label-disconnected = "no wifi"
+label-disconnected-foreground = ${colors.foreground}
 
 [module/temperature]
 type = internal/temperature
@@ -205,6 +203,7 @@ thermal-zone = 0
 format-foreground = ${colors.primary}
 format-prefix = " "
 label = %temperature-c%
+label-foreground = ${colors.foreground}
 
 [module/date]
 type = internal/date
@@ -213,8 +212,10 @@ interval = 1
 date = %a %d-%b %Y  %I:%M %p
 date-alt = %I:%M %p
 
+format-foreground = ${colors.primary}
+format-prefix = "  "
 label = %date%
-label-foreground = ${colors.label}
+label-foreground = ${colors.foreground}
 
 [module/brightness]
 type = internal/backlight
