fix a bug in polybar config

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -56,7 +56,7 @@ separator-foreground = ${colors.disabled}
 font-0 = JetBrainsMono Nerd Font:size=12:weight=bold;2
 
 modules-left = xworkspaces xwindow
-modules-right = battery pulseaudio brightness cpu memory temperature wlan eth  date
+modules-right = battery pulseaudio brightness cpu memory temperature wlan date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -187,7 +187,7 @@ interval = 1
 format-connected =   <label-connected>
 format-connected-foreground = ${colors.primary}
 
-label-connected = %{F#F0C674}%essid%%{F-} %downspeed%
+label-connected = %{F#F0C674}%essid%%{F-} %downspeed:8%
 label-connected-foreground = ${colors.foreground}
 
 format-disconnected =   <label-disconnected>
