--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -19,8 +19,8 @@
 [colors]
 background = #0d0f20    
 background-alt = #1b1e34 
-foreground = #e4f0fb 
-primary = #00d9ff     
+foreground = #e6ebef
+primary = #5294e2     
 secondary = #ff4dff    
 alert = #ff6161         
 disabled = #4e505c       
@@ -53,7 +53,7 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = JetBrainsMono Nerd Font:size=12:weight=bold;2
+font-0 = JetBrainsMono Nerd Font:size=13:weight=bold;2
 
 modules-left = xworkspaces xwindow
 modules-right = battery pulseaudio brightness cpu memory temperature wlan date
