--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -30,7 +30,7 @@ label = #ffc600
 [bar/toph]
 monitor = ${env:MONITOR:}
 width = 100%
-height = 36px
+height = 30px
 radius = 0
 
 dpi = 96
@@ -53,10 +53,12 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = JetBrainsMono Nerd Font:size=13:weight=bold;2
+font-0 = JetBrainsMono Nerd Font:size=12:weight=bold;2
 
 modules-left = xworkspaces xwindow
-modules-right = battery pulseaudio brightness cpu memory temperature wlan date
+modules-center = date
+modules-right = battery pulseaudio brightness temperature wlan bluetooth
+; modules-right = battery pulseaudio brightness cpu memory temperature wlan date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -96,7 +98,7 @@ label-empty-padding = 1
 
 [module/xwindow]
 type = internal/xwindow
-label = %title:0:60:...%
+label = %title:0:40:...%
 
 [module/filesystem]
 type = internal/fs
@@ -145,7 +147,7 @@ type = internal/cpu
 interval = 2
 format-prefix = "󰻠 "
 format-prefix-foreground = ${colors.primary}
-label = %percentage:2%%
+label = %percentage:3%%
 
 [module/battery]
 type = internal/battery
@@ -187,7 +189,8 @@ interval = 1
 format-connected =   <label-connected>
 format-connected-foreground = ${colors.primary}
 
-label-connected = %{F#F0C674}%essid%%{F-} %downspeed:8%
+label-connected = %{F#F0C674}%essid%%{F-} 
+; %downspeed:9%
 label-connected-foreground = ${colors.foreground}
 
 format-disconnected =   <label-disconnected>
@@ -231,9 +234,9 @@ label = %percentage%%
 
 [module/bluetooth]
 type = custom/script
-exec = bluetoothctl show | grep -q "Powered: yes" && echo " $(bluetoothctl info | grep 'Device' | cut -d ' ' -f 2-)" || echo "󰂲 Off"
+exec = bluetoothctl show | grep -q "Powered: yes" && echo " $(bluetoothctl info | grep 'Name' | cut -d ' ' -f 2-)" || echo "󰂲 Off"
 interval = 10
-format-foreground = ${colors.foreground}
+format-foreground = ${colors.label}
 format-prefix = " "
 format-prefix-foreground = ${colors.primary}
 label = %output%
