added new yazi config

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -234,7 +234,7 @@ label = %percentage%%
 
 [module/bluetooth]
 type = custom/script
-exec = bluetoothctl show | grep -q "Powered: yes" && echo " $(bluetoothctl info | grep 'Name' | cut -d ' ' -f 2-)" || echo "󰂲 Off"
+exec = bluetoothctl show | grep -q "Powered: yes" && (name=$(bluetoothctl info | grep 'Name' | cut -d ' ' -f 2-); battery=$(upower -i $(upower -e | grep "battery_BAT") | grep percentage | awk '{print $2}'); [ -z "$name" ] && echo "󰂲 No Device" || echo "$name($battery)") || echo "󰂲 Off"
 interval = 10
 format-foreground = ${colors.label}
 format-prefix = " "
