update polybar config for asthetic

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -55,9 +55,10 @@ separator-foreground = ${colors.disabled}
 
 font-0 = JetBrainsMono Nerd Font:size=12:weight=bold;2
 
-modules-left = xworkspaces xwindow
+modules-left = xworkspaces 
+; modules-left = xworkspaces xwindow
 modules-center = date
-modules-right = battery pulseaudio brightness temperature wlan bluetooth
+modules-right = battery pulseaudio brightness temperature
 ; modules-right = battery pulseaudio brightness cpu memory temperature wlan date
 
 cursor-click = pointer
@@ -189,9 +190,9 @@ interval = 1
 format-connected =   <label-connected>
 format-connected-foreground = ${colors.primary}
 
-label-connected = %{F#F0C674}%essid%%{F-} 
-; %downspeed:9%
-label-connected-foreground = ${colors.foreground}
+label-connected =%downspeed:8%
+; label-connected = %{F#F0C674}%essid%%{F-}%downspeed:9%
+label-connected-foreground = ${colors.secondary}
 
 format-disconnected =   <label-disconnected>
 format-disconnected-foreground = ${colors.secondary}
@@ -203,7 +204,7 @@ label-disconnected-foreground = ${colors.foreground}
 type = internal/temperature
 interval = 2
 thermal-zone = 0
-format-foreground = ${colors.primary}
+format-foreground = ${colors.label}
 format-prefix = " "
 label = %temperature-c%
 label-foreground = ${colors.foreground}
@@ -234,9 +235,10 @@ label = %percentage%%
 
 [module/bluetooth]
 type = custom/script
-exec = bluetoothctl show | grep -q "Powered: yes" && (name=$(bluetoothctl info | grep 'Name' | cut -d ' ' -f 2-); battery=$(upower -i $(upower -e | grep "battery_BAT") | grep percentage | awk '{print $2}'); [ -z "$name" ] && echo "󰂲 No Device" || echo "$name($battery)") || echo "󰂲 Off"
+exec = bluetoothctl show | grep -q "Powered: yes" && (name=$(bluetoothctl info | grep 'Name' | cut -d ' ' -f 2-); battery=$(upower -i $(upower -e | grep "battery_BAT") | grep percentage | awk '{print $2}'); [ -z "$name" ] && echo "󰂲 No Device" || echo "($battery)") || echo "󰂲 Off"
+; exec = bluetoothctl show | grep -q "Powered: yes" && (name=$(bluetoothctl info | grep 'Name' | cut -d ' ' -f 2-); battery=$(upower -i $(upower -e | grep "battery_BAT") | grep percentage | awk '{print $2}'); [ -z "$name" ] && echo "󰂲 No Device" || echo "$name($battery)") || echo "󰂲 Off"
 interval = 10
-format-foreground = ${colors.label}
+format-foreground = ${colors.foreground}
 format-prefix = " "
 format-prefix-foreground = ${colors.primary}
 label = %output%
