updated .zshrc file

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -21,7 +21,7 @@ map ctrl+minus change_font_size all -1.0
 # background_image /home/ssk/Wallpaper-Bank/city-night-aerial-aerial-view-lights-traffic-building.jpg
 
 # Launch tmux no startup
-shell tmux
+# shell tmux
 
 
 # Tokyo Night
