--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -55,10 +55,10 @@ separator-foreground = ${colors.disabled}
 
 font-0 = JetBrainsMono Nerd Font:size=12:weight=bold;2
 
-modules-left = xworkspaces 
+modules-left = xworkspaces temperature
 ; modules-left = xworkspaces xwindow
 modules-center = date
-modules-right = battery pulseaudio brightness temperature
+modules-right = battery pulseaudio brightness wlan bluetooth
 ; modules-right = battery pulseaudio brightness cpu memory temperature wlan date
 
 cursor-click = pointer
@@ -190,8 +190,9 @@ interval = 1
 format-connected =   <label-connected>
 format-connected-foreground = ${colors.primary}
 
-label-connected =%downspeed:8%
+; label-connected =%downspeed:8%
 ; label-connected = %{F#F0C674}%essid%%{F-}%downspeed:9%
+label-connected = %{F#F0C674}%essid%
 label-connected-foreground = ${colors.secondary}
 
 format-disconnected =   <label-disconnected>
@@ -235,8 +236,8 @@ label = %percentage%%
 
 [module/bluetooth]
 type = custom/script
-exec = bluetoothctl show | grep -q "Powered: yes" && (name=$(bluetoothctl info | grep 'Name' | cut -d ' ' -f 2-); battery=$(upower -i $(upower -e | grep "battery_BAT") | grep percentage | awk '{print $2}'); [ -z "$name" ] && echo "󰂲 No Device" || echo "($battery)") || echo "󰂲 Off"
-; exec = bluetoothctl show | grep -q "Powered: yes" && (name=$(bluetoothctl info | grep 'Name' | cut -d ' ' -f 2-); battery=$(upower -i $(upower -e | grep "battery_BAT") | grep percentage | awk '{print $2}'); [ -z "$name" ] && echo "󰂲 No Device" || echo "$name($battery)") || echo "󰂲 Off"
+; exec = bluetoothctl show | grep -q "Powered: yes" && (name=$(bluetoothctl info | grep 'Name' | cut -d ' ' -f 2-); battery=$(upower -i $(upower -e | grep "battery_BAT") | grep percentage | awk '{print $2}'); [ -z "$name" ] && echo "󰂲 No Device" || echo "($battery)") || echo "󰂲 Off"
+exec = bluetoothctl show | grep -q "Powered: yes" && (name=$(bluetoothctl info | grep 'Name' | cut -d ' ' -f 2-); battery=$(upower -i $(upower -e | grep "battery_BAT") | grep percentage | awk '{print $2}'); [ -z "$name" ] && echo "󰂲 No Device" || echo "$name($battery)") || echo "󰂲 Off"
 interval = 10
 format-foreground = ${colors.foreground}
 format-prefix = " "
