--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -8,14 +8,7 @@
 ;   ██║     ╚██████╔╝███████╗██║   ██████╔╝██║  ██║██║  ██║
 ;   ╚═╝      ╚═════╝ ╚══════╝╚═╝   ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝
 ;
-;
-;   To learn more about how to configure Polybar
-;   go to https://github.com/polybar/polybar
-;
-;   The README contains a lot of information
-;
 ;==========================================================
-
 [colors]
 background = #0d0f20    
 background-alt = #1b1e34 
@@ -27,50 +20,42 @@ disabled = #4e505c
 transparent = #00000000   
 label = #ffc600            
 
-[bar/toph]
+[bar/top]
 monitor = ${env:MONITOR:}
 width = 100%
 height = 30px
 radius = 0
-
 dpi = 96
-
 background = ${colors.background}
 foreground = ${colors.foreground}
-
-top = true
-; bottom = true
-
-line-size = 0pt
-
-border-color = #00000000
-
+font-0 = JetBrainsMono Nerd Font:size=14:weight=bold;2
 padding-left = 0
 padding-right = 1
-
 module-margin = 1
-
-separator = |
+separator = | 
 separator-foreground = ${colors.disabled}
 
-font-0 = JetBrainsMono Nerd Font:size=12:weight=bold;2
-
-modules-left = xworkspaces temperature
-; modules-left = xworkspaces xwindow
+modules-left = xworkspaces
 modules-center = date
-modules-right = battery pulseaudio brightness wlan bluetooth
-; modules-right = battery pulseaudio brightness cpu memory temperature wlan date
+modules-right = battery pulseaudio brightness 
 
-cursor-click = pointer
-cursor-scroll = ns-resize
+[bar/bottom]
+monitor = ${env:MONITOR:}
+width = 100%
+height = 36px
+bottom = true
+background = ${colors.background}
+foreground = ${colors.foreground}
+font-0 = JetBrainsMono Nerd Font:size=14:weight=bold;2
+padding-left = 2
+padding-right = 2
+module-margin = 1
+separator = | 
+separator-foreground = ${colors.disabled}
 
-enable-ipc = true
-
-; wm-restack = generic
-; wm-restack = bspwm
-; wm-restack = i3
-
-; override-redirect = true
+modules-left = temperature cpu memory 
+modules-center = xwindow
+modules-right = wlan bluetooth 
 
 [module/systray]
 type = internal/tray
@@ -107,7 +92,7 @@ interval = 25
 
 mount-0 = /
 
-label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
+label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_free%%
 
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.disabled}
@@ -139,14 +124,14 @@ label-indicator-background = ${colors.secondary}
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = "󰍛 "
+format-prefix = "RAM "
 format-prefix-foreground = ${colors.primary}
 label = %percentage_used:2%%
 
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = "󰻠 "
+format-prefix = "CPU"
 format-prefix-foreground = ${colors.primary}
 label = %percentage:3%%
 
@@ -191,8 +176,8 @@ format-connected =   <label-connected>
 format-connected-foreground = ${colors.primary}
 
 ; label-connected =%downspeed:8%
-; label-connected = %{F#F0C674}%essid%%{F-}%downspeed:9%
-label-connected = %{F#F0C674}%essid%
+label-connected = %{F#F0C674}%essid%%{F-}%downspeed:9%
+; label-connected = %{F#F0C674}%essid%
 label-connected-foreground = ${colors.secondary}
 
 format-disconnected =   <label-disconnected>
@@ -207,18 +192,20 @@ interval = 2
 thermal-zone = 0
 format-foreground = ${colors.label}
 format-prefix = " "
-label = %temperature-c%
+label = %temperature-c:4%
 label-foreground = ${colors.foreground}
 
 [module/date]
 type = internal/date
 interval = 1
 
+; date = %I:%M %p
 date = %a %d-%b %Y  %I:%M %p
 date-alt = %I:%M %p
 
-format-foreground = ${colors.primary}
+format-foreground = ${colors.secondary}
 format-prefix = "  "
+; format-prefix = "  "
 label = %date%
 label-foreground = ${colors.foreground}
 
@@ -231,7 +218,7 @@ interval = 1
 enable-scroll = true
 scroll-interval = 10
 format-prefix = "󰃠 "
-format-prefix-foreground = ${colors.primary}
+format-prefix-foreground = ${colors.label}
 label = %percentage%%
 
 [module/bluetooth]
