Added neofetch config and new starship prompt

--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -1,19 +1,43 @@
-# https://github.com/chick2d/neofetch-themes
-# Made by https://github.com/chatsagnik
-
+# See this wiki page for more info:
+# https://github.com/dylanaraps/neofetch/wiki/Customizing-Info
 print_info() {
-    prin " "
-    info "$(color 6)‎ ‎ OS‎ ‎ ‎ ‎ " distro
-    info "$(color 6)󰥔‎ ‎ UP‎ ‎ ‎ ‎ " uptime
-    info "$(color 6)󰏗‎ ‎ PKG‎ ‎‎ ‎ " packages
-    info "$(color 6)‎ ‎ WM‎ ‎ ‎ ‎ " wm
-    info "$(color 6)‎ ‎ TERM‎ ‎‎  " term
-    info "$(color 6)‎ ‎ SHELL‎ " shell
-    
-    prin "$(color 1) $(color 2) $(color 3) $(color 4) $(color 5) $(color 6) $(color 7) $(color 8)"
+    info title
+    info underline
+
+    info " " distro
+    # info "Host" model
+    info " " kernel
+    info " " packages
+    # info "Shell" shell
+    info " " resolution
+    # info "DE" de
+    info " " wm
+    # info "WM Theme" wm_theme
+    # info "Theme" theme
+    # info "Icons" icons
+    info " " term
+    # info "Terminal Font" term_font
+
+    info " " cpu
+    info " " gpu
+
+    info "󰍛 " memory
+    info " " disk
+
+    info "󱫐 " uptime
+    # info "GPU Driver" gpu_driver  # Linux/macOS only
+    # info "CPU Usage" cpu_usage
+    # info "Battery" battery
+    # info "Font" font
+    # info "Song" song
+    # [[ "$player" ]] && prin "Music Player" "$player"
+    # info "Local IP" local_ip
+    # info "Public IP" public_ip
+    # info "Users" users
+    # info "Locale" locale  # This only works on glibc systems.
+
+    info cols
 }
-
-
 
 # Title
 
@@ -51,7 +75,7 @@ kernel_shorthand="on"
 # Values:   'on', 'tiny', 'off'
 # Flag:     --distro_shorthand
 # Supports: Everything except Windows and Haiku
-distro_shorthand="on"
+distro_shorthand="off"
 
 # Show/Hide OS Architecture.
 # Show 'x86_64', 'x86' and etc in 'Distro:' output.
@@ -63,7 +87,7 @@ distro_shorthand="on"
 # Example:
 # on:  'Arch Linux x86_64'
 # off: 'Arch Linux'
-os_arch="off"
+os_arch="on"
 
 
 # Uptime
@@ -79,7 +103,7 @@ os_arch="off"
 # on:   '2 days, 10 hours, 3 mins'
 # tiny: '2d 10h 3m'
 # off:  '2 days, 10 hours, 3 minutes'
-uptime_shorthand="on"
+uptime_shorthand="tiny"
 
 
 # Memory
@@ -94,7 +118,7 @@ uptime_shorthand="on"
 # Example:
 # on:   '1801MiB / 7881MiB (22%)'
 # off:  '1801MiB / 7881MiB'
-memory_percent="off"
+memory_percent="on"
 
 # Change memory output unit.
 #
@@ -148,7 +172,7 @@ shell_path="off"
 # Example:
 # on:  'bash 4.4.5'
 # off: 'bash'
-shell_version="on"
+shell_version="off"
 
 
 # CPU
@@ -173,7 +197,7 @@ speed_type="bios_limit"
 # Example:
 # on:    'i7-6500U (4) @ 3.1GHz'
 # off:   'i7-6500U (4) @ 3.100GHz'
-speed_shorthand="off"
+speed_shorthand="on"
 
 # Enable/Disable CPU brand in output.
 #
@@ -184,7 +208,7 @@ speed_shorthand="off"
 # Example:
 # on:   'Intel i7-6500U'
 # off:  'i7-6500U (4)'
-cpu_brand="on"
+cpu_brand="off"
 
 # CPU Speed
 # Hide/Show CPU speed.
@@ -261,7 +285,7 @@ gpu_brand="on"
 #
 # integrated:
 #   GPU1: Intel Integrated Graphics
-gpu_type="dedicated"
+gpu_type="all"
 
 
 # Resolution
@@ -389,7 +413,7 @@ disk_show=('/')
 # none:   'Disk: 74G / 118G (66%)'
 #         'Disk: 74G / 118G (66%)'
 #         'Disk: 74G / 118G (66%)'
-disk_subtitle="mount"
+disk_subtitle="none"
 
 # Disk percent.
 # Show/Hide disk percent.
@@ -456,7 +480,7 @@ disk_percent="on"
 # xmms2d
 # xnoise
 # yarock
-music_player="mpd"
+music_player="auto"
 
 # Format to display song information.
 #
@@ -540,8 +564,8 @@ underline_char="-"
 #
 # Example:
 # separator="->":   'Shell-> bash'
-# separator=" =":   'WM = dwm'
-separator=" "
+# # separator=" =":   'WM = dwm'
+separator=":"
 
 
 # Color Blocks
@@ -686,7 +710,7 @@ image_backend="ascii"
 # NOTE: 'auto' will pick the best image source for whatever image backend is used.
 #       In ascii mode, distro ascii art will be used and in an image mode, your
 #       wallpaper will be used.
-image_source="auto"
+image_source="ascii"
 
 
 # Ascii Options
@@ -738,7 +762,7 @@ image_source="auto"
 #       Slackware, SunOS, LinuxLite, OpenSUSE, Raspbian,
 #       postmarketOS, and Void have a smaller logo variant.
 #       Use '{distro name}_small' to use the small variants.
-ascii_distro="arch_small"
+ascii_distro="EndeavourOS"
 
 # Ascii Colors
 #
@@ -828,4 +852,15 @@ xoffset=0
 #
 # Default: ''
 # Values:  'color', 'blue'
-# Flag:    --b
+# Flag:    --bg_color
+background_color=
+
+
+# Misc Options
+
+# Stdout mode
+# Turn off all colors and disables image backend (ASCII/Image).
+# Useful for piping into another command.
+# Default: 'off'
+# Values: 'on', 'off'
+stdout="off"
