Added floating terminal in tmux, and few new nvim plugins

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,6 +15,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'omerxx/tmux-sessionx'
+set -g @plugin 'omerxx/tmux-floax'
 
 # Plugin settings
 set -g @resurrect-capture-pane-contents 'on'
@@ -25,7 +26,9 @@ set -g prefix C-a
 unbind C-b
 bind-key C-a send-prefix
 
+# key bindings for plugins
 set -g @sessionx-bind 'space'
+set -g @floax-bind '-n M-t'
 
 # Setup tmux theme
 set -g @tokyo-night-tmux_window_id_style fsquare
