shell and tmux bindings update

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -76,6 +76,7 @@ set -sg escape-time 10
 
 # keybindings
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
+bind-key v run-shell '~/.tmux/plugins/tmux-resurrect/scripts/save.sh' \; display-message "Session saved!"
 
 # Set keys to change window pane
 bind -r j resize-pane -D 5
