--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -56,7 +56,7 @@
 },
 "backlight": {
     // "device": "acpi_video1",
-    "format": "{icon}&#8239;{percent}%",
+    "format": "<span foreground='#bd93f9'>{icon}</span> {percent}%",
     "format-icons": "󰃠 ",
     "on-scroll-down": "brightnessctl -c backlight set 1%-",
     "on-scroll-up": "brightnessctl -c backlight set +1%"
@@ -67,7 +67,7 @@
             "warning": 25,
             "critical": 15
       },
-      "format": "{capacity}% {icon}",
+      "format": "{capacity}% <span foreground='#bd93f9'>{icon}</span>",
       "format-full": "{capacity}% {icon}",
       "format-charging": "{capacity}% ",
       "format-plugged": "{capacity}% ",
@@ -77,7 +77,7 @@
         "format-icons": [" ", " ", " ", " ", " "]
     },
     "pulseaudio": {
-        "format": "{volume}% {icon}",
+        "format": "{volume}%  <span foreground='#bd93f9'>{icon}</span>{format_source}",
         "format-muted": " {format_source}",
         "format-source": "{volume}%  ",
         "format-source-muted": " ",
@@ -102,9 +102,10 @@
     "spacing": 4,
 
     "modules-left": [
+      "temperature",
       "cpu",
       "memory",
-      "temperature"
+      "disk"
     ],
     "modules-center": [
       "sway/window"
@@ -112,21 +113,25 @@
     "modules-right": [
       "network"
     ],
+    "disk": {
+      "interval": 30,
+      "format": "{percentage_used}% <span foreground='#bd93f9'> </span>"
+    },
     "cpu": {
-      "format": "{usage}% ",
+      "format": "{usage}%  <span foreground='#bd93f9'> </span>",
       "tooltip": false
     },
     "memory": {
-      "format": "{}% "
+      "format": "{}%  <span foreground='#bd93f9'> </span>"
     },
     "temperature": {
       "critical-threshold": 80,
-      "format": "{temperatureC}°C",
+      "format": "{temperatureC}°C  <span foreground='#bd93f9'>{icon}</span>",
       "format-icons": ["", "", ""]
     },
     "network": {
       "interval": 2,
-      "format-wifi": "   {essid}",
+      "format-wifi": " <span foreground='#bd93f9'> </span>  {essid}",
       "format-ethernet": " ",
       "format-linked": " {ipaddr}",
       "format-disconnected": " Disconnected",
